--- a/Chapter_4.ipynb
+++ b/Chapter_4.ipynb
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#micro mini project\n",
+    "#micro mini project -1 (adding add to the last element of the List)\n",
     "def mine(something):\n",
     "    something[-1] = 'and ' + something[-1]\n",
     "    "
@@ -131,10 +131,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".....\n",
+      ".OO..\n",
+      "OOOO.\n",
+      "OOOOO\n",
+      ".OOOO\n",
+      "OOOOO\n",
+      "OOOO.\n",
+      ".OO..\n"
+     ]
+    }
+   ],
+   "source": [
+    " # micro mini task -2\n",
+    "grid = [['.', '.', '.', '.', '.', '.'],\n",
+    "        ['.', 'O', 'O', '.', '.', '.'],\n",
+    "        ['O', 'O', 'O', 'O', '.', '.'],\n",
+    "        ['O', 'O', 'O', 'O', 'O', '.'],\n",
+    "        ['.', 'O', 'O', 'O', 'O', 'O'],\n",
+    "        ['O', 'O', 'O', 'O', 'O', '.'],\n",
+    "        ['O', 'O', 'O', 'O', '.', '.'],\n",
+    "        ['.', 'O', 'O', '.', '.', '.'],\n",
+    "        ['.', '.', '.', '.', '.', '.']]\n",
+    "\n",
+    "\n",
+    "for i in range (0,8):\n",
+    "    for j in range (0,5):\n",
+    "        print(grid[i][j] , end = '')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
