Fantasy Game update

--- a/Chapter_5.ipynb
+++ b/Chapter_5.ipynb
@@ -32,10 +32,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inventory:\n",
+      "1 rope\n",
+      "6 torch\n",
+      "45 gold coin\n",
+      "2 dagger\n",
+      "12 arrow\n",
+      "1 ruby\n",
+      "Total number of items: 67\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Game two Fantasy Game implementation\n",
+    "stuff = {'rope': 1, 'torch': 6, 'gold coin': 42, 'dagger': 1, 'arrow': 12}\n",
+    "\n",
+    "def displayInventory(inventory):\n",
+    "    print(\"Inventory:\")\n",
+    "    item_total = 0\n",
+    "    for k, v in inventory.items():\n",
+    "            print(str(v) + \" \", end =\"\")\n",
+    "            print(k)\n",
+    "            item_total = int(v) + int(item_total)\n",
+    "    print(\"Total number of items: \" + str(item_total))\n",
+    "    \n",
+    "def addToInventory(inventory, addedItems):\n",
+    "    for i in addedItems:\n",
+    "        if i in inventory:\n",
+    "            inventory[i] += 1\n",
+    "        else:\n",
+    "            inventory[i] = 1\n",
+    "    return inventory\n",
+    "\n",
+    "dragonLoot = ['gold coin', 'dagger', 'gold coin', 'gold coin', 'ruby']\n",
+    "inv = addToInventory(stuff, dragonLoot)\n",
+    "displayInventory(inv)"
+   ]
   }
  ],
  "metadata": {
