--- a/Chapter_7.ipynb
+++ b/Chapter_7.ipynb
@@ -32,18 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copied to clipboard:\n",
-      "info@nostarch.com\n",
-      "media@nostarch.com\n",
-      "academic@nostarch.com\n",
-      "help@nostarch.com\n"
+      "No phone numbers or email addresses found.\n"
      ]
     }
    ],
@@ -70,30 +66,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "Nothing Found\n"
      ]
     }
    ],
    "source": [
-    "urlclassifier = re.compile(r'''(https//)? (http//)  [a-zA-Z0-9.]  ''',re.VERBOSE)\n",
+    "urlclassifier = re.compile('http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+] |[!*\\(\\), ]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', re.VERBOSE) \n",
     "text2 = str(pyperclip.paste())\n",
     "result = urlclassifier.search(text2)\n",
-    "print(result)"
+    "if (result):\n",
+    "    print(result.group(0))\n",
+    "else:\n",
+    "    print(\"Nothing Found\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(5, 6), match=' '>\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "password_checker = re.compile('[a-zA-Z] & [$-_@.&+] & [0-9] & |[!*\\(\\), ]' ,re.VERBOSE)\n",
+    "text2 = str(pyperclip.paste())\n",
+    "result = password_checker.search(text2)\n",
+    "print(result)\n",
+    "if (result):\n",
+    "    print(result.group(0))\n",
+    "else:\n",
+    "    print(\"Password Not Strong\")"
+   ]
   },
   {
    "cell_type": "code",
